--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,13 @@
 # application port
 server.port=9999
 
-# datasource
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:openbanking
 spring.datasource.username=sa
 spring.datasource.password=
 
-# jpa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
