--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+           <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
     </dependencies>
 
     <build>
